# pure-search

./: default.nix  pure-search.cabal
src/Pure/: Search.hs
