name:                pure-search
version:             0.7.0.0
synopsis:            A generic filtering search component based on pure-txt-search.
homepage:            github.com/grumply/pure-txt-interpolate
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    pure >= 0.7 && < 1,
    pure-theme >= 0.7 && < 1,
    pure-txt-search >= 0.7 && < 1

  exposed-modules:
    Pure.Search

  hs-source-dirs: src

  default-language: Haskell2010