name:                pure-search
version:             0.8.0.0
synopsis:            A generic filtering search component based on pure-txt-search.
homepage:            purehs.org/doc/pure-search
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-search.git

library
  build-depends:
    base,
    pure,
    pure-theme,
    pure-txt-search

  exposed-modules:
    Pure.Search

  hs-source-dirs: src

  default-language: Haskell2010
